@@ -1,3 +1,4 @@
+[2017-08-29 23:43:39 +0200]  Need to know how to pass a widget (or a reference) when doing dnd          karasu      {1cf8ad87}
 [2017-08-29 19:31:51 +0200]  Going somewhere with drag and drop (or so it seems)                        karasu      {1959880c}
 [2017-08-29 10:26:04 +0200]  In the middle of something                                                 karasu      {5f34184c}
 [2017-08-28 03:20:27 +0200]  Adding new mirrors screen (wip)                                            karasu      {f88628ed}
